--- a/src/main/webapp/reportInstitution/report_opd_credit_bill_by_credit_company_with_letter.xhtml
+++ b/src/main/webapp/reportInstitution/report_opd_credit_bill_by_credit_company_with_letter.xhtml
@@ -33,6 +33,10 @@
                                         completeMethod="#{creditCompanyController.completeCredit}" var="ix" itemLabel="#{ix.name}" itemValue="#{ix}" size="30"  style="width: 400px;">
 
                         </p:autoComplete>
+                        <h:outputLabel value="Vat Reg. No"/>
+                        <p:inputText value="#{creditSummeryController.vatRegNo}" autocomplete="off" />
+                        <h:outputLabel value="Invoice No"/>
+                        <p:inputText value="#{creditSummeryController.invoceNo}" autocomplete="off" />
                         <h:outputLabel value="With Footer"/>
                         <p:selectBooleanCheckbox value="#{creditSummeryController.withFooter}" />
                     </h:panelGrid>
@@ -83,26 +87,39 @@
                     </p:column>
                     <p:column style="text-align: right;">
                         <f:facet name="header">
-                            <p:outputLabel value="Value" />
+                            <p:outputLabel value="Non-Taxable Value" />
                         </f:facet>
-                        <h:outputLabel value="#{b.vat}" >
+                        <h:outputLabel value="#{b.netTotal-b.vatCalulatedAmount}" >
                             <f:convertNumber pattern="#,##0.00"/>
                         </h:outputLabel>
                         <f:facet name="footer">
-                            <h:outputLabel value="#{creditSummeryController.totalVat}" >
+                            <h:outputLabel value="#{creditSummeryController.total-creditSummeryController.totalVatCalculatedValue}" >
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputLabel>
                         </f:facet>
                     </p:column>
                     <p:column style="text-align: right;">
                         <f:facet name="header">
-                            <p:outputLabel value="Value" />
+                            <p:outputLabel value="Vat Liable Value" />
                         </f:facet>
-                        <h:outputLabel value="#{b.netTotal}" >
+                        <h:outputLabel value="#{b.vatCalulatedAmount}" >
                             <f:convertNumber pattern="#,##0.00"/>
                         </h:outputLabel>
                         <f:facet name="footer">
-                            <h:outputLabel value="#{creditSummeryController.total}" >
+                            <h:outputLabel value="#{creditSummeryController.totalVatCalculatedValue}" >
+                                <f:convertNumber pattern="#,##0.00"/>
+                            </h:outputLabel>
+                        </f:facet>
+                    </p:column>
+                    <p:column style="text-align: right;">
+                        <f:facet name="header">
+                            <p:outputLabel value="Vat" />
+                        </f:facet>
+                        <h:outputLabel value="#{b.vat}" >
+                            <f:convertNumber pattern="#,##0.00"/>
+                        </h:outputLabel>
+                        <f:facet name="footer">
+                            <h:outputLabel value="#{creditSummeryController.totalVat}" >
                                 <f:convertNumber pattern="#,##0.00"/>
                             </h:outputLabel>
                         </f:facet>
@@ -134,7 +151,7 @@
                 <p:panel   id="gpBillPreviewPaysheet"  styleClass="noBorder summeryBorder">
                     <cre:credit_letter bills="#{creditSummeryController.creditBills}" con="#{creditSummeryController}"/>
                 </p:panel>
-                <p:spacer height="500" />
+                <p:spacer height="550" />
                 <p:panel   id="gpBillPreviewPaysheet2"  styleClass="noBorder summeryBorder">
                     <cre:credit_letter_vat_invoice bills="#{creditSummeryController.creditBills}" con="#{creditSummeryController}"/>
                 </p:panel>
