--- a/src/main/webapp/reportLab/report_lab_collection_centre_summery.xhtml
+++ b/src/main/webapp/reportLab/report_lab_collection_centre_summery.xhtml
@@ -53,7 +53,7 @@
                         <h:outputLabel value="#{commonReport.toDate}" >
                             <f:convertDateTime pattern="yyyy MMMM dd hh:mm:ss a" />
                         </h:outputLabel>
-                                          
+
                     </f:facet>
                     <p:column headerText="No">
                         <f:facet name="header">
@@ -84,12 +84,28 @@
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                     </p:column>
+                    <p:column headerText="Vat Total" styleClass="averageNumericColumn">
+                        <f:facet name="header">
+                            <h:outputLabel value="Vat Total"/>                        
+                        </f:facet>
+                        <h:outputLabel value="#{r.totalVat}">
+                            <f:convertNumber pattern="#,##0.00" />
+                        </h:outputLabel>
+                    </p:column>
 
-                    <p:column headerText="Net Total" styleClass="averageNumericColumn">
+                    <p:column headerText="Total" styleClass="averageNumericColumn">
                         <f:facet name="header">
                             <h:outputLabel value="Net Total"/>                        
                         </f:facet>
                         <h:outputLabel value="#{r.total}">
+                            <f:convertNumber pattern="#,##0.00" />
+                        </h:outputLabel>
+                    </p:column>
+                    <p:column headerText="Vat Plus Total" styleClass="averageNumericColumn">
+                        <f:facet name="header">
+                            <h:outputLabel value="Net Total"/>                        
+                        </f:facet>
+                        <h:outputLabel value="#{r.total+r.totalVat}">
                             <f:convertNumber pattern="#,##0.00" />
                         </h:outputLabel>
                     </p:column>
@@ -111,9 +127,23 @@
                                     </h:outputLabel>
                                 </f:facet>
                             </p:column>
+                            <p:column footerText="#{commonReport.totalVat}" style=" text-align: right;">
+                                <f:facet name="footer">
+                                    <h:outputLabel value="#{commonReport.totalVat}" style=" text-align: right;">
+                                        <f:convertNumber pattern="#,##0.00"/>
+                                    </h:outputLabel>
+                                </f:facet>
+                            </p:column>
                             <p:column footerText="#{commonReport.total}" style=" text-align: right;">
                                 <f:facet name="footer">
                                     <h:outputLabel value="#{commonReport.total}" style=" text-align: right;">
+                                        <f:convertNumber pattern="#,##0.00"/>
+                                    </h:outputLabel>
+                                </f:facet>
+                            </p:column>
+                            <p:column footerText="#{commonReport.total+commonReport.totalVat}" style=" text-align: right;">
+                                <f:facet name="footer">
+                                    <h:outputLabel value="#{commonReport.total+commonReport.totalVat}" style=" text-align: right;">
                                         <f:convertNumber pattern="#,##0.00"/>
                                     </h:outputLabel>
                                 </f:facet>
