--- a/src/main/webapp/channel/channel_report_patient_count_income_with_doc.xhtml
+++ b/src/main/webapp/channel/channel_report_patient_count_income_with_doc.xhtml
@@ -54,7 +54,7 @@
                                 <p:printer target="reportPrint"  />
                             </p:commandButton>
                             <p:commandButton ajax="false" value="Excel" styleClass="noPrintButton">
-                                <pe:exporter type="xlsx" target="tbl tblscn" fileName="channel_hospital_income"  />
+                                <pe:exporter type="xlsx" target="tbl,tblscn" fileName="channel_hospital_income"  />
                             </p:commandButton> 
 
 
