--- a/src/main/webapp/channel/channel_booking.xhtml
+++ b/src/main/webapp/channel/channel_booking.xhtml
@@ -447,7 +447,7 @@
                                             value="#{channelBillController.searchPatient}" 
                                             completeMethod="#{patientController.completePatientByNameOrCode}" 
                                             var="apt" itemLabel="#{apt.person.name}" 
-                                            itemValue="#{apt}" size="30"  styleClass="mediuminput" required="true" requiredMessage="Please enter patient" onkeypress="if (event.keyCode == 10) {return false; }">
+                                            itemValue="#{apt}" size="30"  styleClass="mediuminput"  onkeypress="if (event.keyCode == 10) {return false; }">
                                 <p:column headerText="Name">
                                     <h:outputLabel value="#{apt.person.nameWithTitle}" />
                                 </p:column>
