--- a/src/main/webapp/channel/channel_shedule.xhtml
+++ b/src/main/webapp/channel/channel_shedule.xhtml
@@ -106,7 +106,7 @@
                         </p:calendar>
 
                         <p:outputLabel value="Starting Number"/>
-                        <p:inputText autocomplete="off" value="#{sheduleController.current.startingNo}"/>
+                        <p:inputText autocomplete="off" value="#{sheduleController.current.startingNo}" disabled="#{sheduleController.current.id ne null and !webUserController.hasPrivilege('ChannellingChannelStartingNo')}"/>
 
                         <p:outputLabel value="Max Number"/>
                         <p:inputText autocomplete="off" value="#{sheduleController.current.maxNo}"/>
@@ -114,7 +114,7 @@
                         <p:outputLabel value="Duration in Minutes"/>
                         <p:inputText autocomplete="off" value="#{sheduleController.current.duration}"/>
                         <p:outputLabel value="Room Number"/>
-                        <p:inputText autocomplete="off" value="#{sheduleController.current.roomNo}"/>
+                        <p:inputText autocomplete="off" value="#{sheduleController.current.roomNo}" disabled="#{sheduleController.current.id ne null and !webUserController.hasPrivilege('ChannellingChannelRoomNo')}"/>
 
                         <p:outputLabel value="Before Session" rendered="false"/>
                         <p:autoComplete rendered="false" forceSelection="true" value="#{sheduleController.current.beforeSession}" 
@@ -153,7 +153,7 @@
                         <p:outputLabel value="Reserver Name"/>
                         <p:inputText autocomplete="off" value="#{sheduleController.current.reserveName}"/>
                         <p:outputLabel value="Maximum Raw Number"></p:outputLabel>
-                        <p:inputText autocomplete="off" value="#{sheduleController.current.maxTableRows}"></p:inputText>
+                        <p:inputText autocomplete="off" value="#{sheduleController.current.maxTableRows}" disabled="#{sheduleController.current.id ne null and !webUserController.hasPrivilege('ChannellingChannelMaxRowNo')}"></p:inputText>
 
                     </p:panelGrid>
                     <br/>
