--- a/src/main/webapp/lab_administration.xhtml
+++ b/src/main/webapp/lab_administration.xhtml
@@ -14,7 +14,7 @@
                     <p:panel header="Lab Administration" styleClass="verticalAndHorizontalCenteringLarge" >
                         <h:panelGrid columns="3" styleClass="alignTop" style="margin: auto;">
                             <h:panelGrid columns="1">
-                                <p:panel header="Manage Items" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
+                                <p:panel header="Manage Items" rendered="#{webUserController.hasPrivilege('LabItems')}" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
                                     <h:panelGrid columns="1">
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Categories" action="lab_investigation_category" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Tubes" action="lab_investigation_tube" onclick="onSubmitButton();" />
@@ -29,7 +29,7 @@
                             </h:panelGrid>
 
                             <h:panelGrid columns="1">
-                                <p:panel header="Manage Reports" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
+                                <p:panel header="Manage Reports" rendered="#{webUserController.hasPrivilege('LabReports')}" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
                                     <h:panelGrid columns="1">
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Report Format Categories" action="lab_report_format_category" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Report Formats" rendered="#{webUserController.hasPrivilege('LabReportFormatEditing')}" action="lab_report_format" onclick="onSubmitButton();" />
@@ -46,13 +46,13 @@
                             </h:panelGrid>  
 
                             <h:panelGrid columns="1">
-                                <p:panel header="Lists" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
+                                <p:panel header="Lists" rendered="#{webUserController.hasPrivilege('LabLists')}" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
                                     <h:panelGrid columns="1">
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Lab Investigation List" action="#{investigationController.listAllIxs}" onclick="onSubmitButton();" />
                                         <p:commandButton  styleClass="linkButton" ajax="false" value="Lab Investigation List by Category" action="lab_investigation_list_by_category" onclick="onSubmitButton();" />
                                     </h:panelGrid>                                        
                                 </p:panel>
-                                <p:panel header="Setup" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
+                                <p:panel header="Setup" rendered="#{webUserController.hasPrivilege('LabSetUp')}" style="width: 400px;margin: auto;" collapsed="false" toggleable="true">
                                     
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Report Samples" actionListener="#{investigationController.listAllIxs}" action="/lab/report_samples" onclick="onSubmitButton();" />
                                     <p:commandButton  styleClass="linkButton" ajax="false" value="Report Dynamic Lables" action="/lab/report_dynamic_lables" onclick="onSubmitButton();" />
